# llm20q

./: .lintrunner.toml  .pylintrc  Makefile  README.md  pyproject.toml
llm20q/: __init__.py  agents.py  play.py
tests/: conftest.py  test_agents.py  test_llm20q.py
